Fixed title spacing

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -583,6 +583,8 @@ a.bg-danger:hover {
 .page-header {
   border-left: 5px solid #dddddd;
   padding-left: 5px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 .page-header-link {
   color: #333333;
